# eusb

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build_android.yml  build_macos.yml  build_ubuntu.yml  build_windows.yml  rust.yml
eusb/: Cargo.toml  README.md  build.rs
eusb/src/: core.rs  define.rs  device.rs  endpoint.rs  error.rs  interface.rs  lib.rs  libusb.rs  manager.rs  platform.rs  prelude.rs  stream.rs  transfer.rs  utils.rs
eusb/src/adaptor/: mod.rs
eusb/src/adaptor/libusb/: channel.rs  config.rs  device.rs  interface.rs  manager.rs  mod.rs  ptr.rs  transfer.rs
eusb/src/platform/: mod.rs
eusb/src/platform/libusb/: context.rs  device.rs  device_handle.rs  endpoint.rs  errors.rs  interface.rs  manager.rs  mod.rs  ptr.rs  transfer.rs
example/: Cargo.toml  bulk_channel.rs  bulk_transfer.rs  cancel.rs  control_transfer.rs  device.rs
libusb-src/: Cargo.toml  LICENSE  README.md  build.rs
libusb-src/src/: constants.rs  lib.rs
libusb-src/tests/: test.rs
src/: core.rs  define.rs  device.rs  error.rs  interface.rs  lib.rs  prelude.rs  transfer.rs
