[package]
name = "eusb"
version = "0.4.2"
authors = ["zhour rui <zrufo747@outlook.com>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/ZR233/eusb"
repository = "https://github.com/ZR233/eusb"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "async"]
edition = "2021"
documentation = "https://docs.rs/eusb"

[dependencies]
libusb-src = {path = "../libusb-src", version = "1.26"}
thiserror = "1.0"
futures = "0.3"
log = "0.4"
pin-project = "1.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"