[package]
name = "example"
version = "0.0.1"
authors = ["zhour rui <zrufo747@outlook.com>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/ZR233/eusb"
repository = "https://github.com/ZR233/eusb.git"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]
edition = "2021"

[[bin]]
name = "control_transfer"
path = "control_transfer.rs"
[[bin]]
name = "bulk_transfer"
path = "bulk_transfer.rs"
[[bin]]
name = "bulk_channel"
path = "bulk_channel.rs"
[[bin]]
name = "cancel"
path = "cancel.rs"

[dependencies]
eusb = {    path = "../eusb", version = "0"   }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
futures = "0.3"

[dev-dependencies]
