[package]
name = "libusb-src"
version = "1.27.0+1.0.26"
edition = "2021"
authors = ["zhour rui <zrufo747@outlook.com>"]
description = "FFI bindings for libusb. Can be easily cross compiled."
license = "MIT"
homepage = "https://github.com/ZR233/eusb"
repository = "https://github.com/ZR233/eusb.git"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "/libusb/libusb",
    "/libusb/msvc",
    "/src/*",
    "/tests",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "COPYING",
    "AUTHORS",
]

build = "build.rs"

[lib]


[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.66"
regex = "1.9"
